--- a/content/posts/40_bb.md
+++ b/content/posts/40_bb.md
@@ -1,7 +1,7 @@
 ---
 title: "Part 40: Browsing backup"
 date: 2021-02-02T12:10:51+05:30
-thumb_image: "/images/pi/browser.jpg"
+thumb_image: "/posts/attachments/browser.jpg"
 omit_header_text: true
 draft: false
 tags: ["backup", "nginx"]
