--- a/content/posts/40_bb.md
+++ b/content/posts/40_bb.md
@@ -78,11 +78,11 @@ spec:
 
 Finally, make sure you have a DNAT rule to route traffic on TCP port 30038 to the cluster. 
 
-![](/images/pi/nginx_ext_port.png)
+![](/posts/attachments/nginx_ext_port.png)
 
 Now, open a browser to `http://172.16.16.16:30038/data/` and voila!
 
-![](/images/pi/bb.png)
+![](/posts/attachments/bb.png)
 
 As you create new files on your source folder, these will automatically be rsynced over to your cluster, and stored in a 500 GB volume managed by Longhorn. If you need a file, simply open the above link and download it. And oh, since there are two replicas of this volume, your backup is protected even if one node (and it's SSD drive) were to crash. 
 
